# Tech-2

./: avaliacao.md  requisitos.md
base/: requirements.txt
inicio/: main.py  pyproject.toml
tech/: .gitignore  docker-compose.yml  main.py  pyproject.toml
tech/genetic_algorithm/: __init__.py  crossover.py  engine.py  fitness.py  mutation.py  population.py  problems.py
tech/llm/: __init__.py  openrouter.py  prompts.py
tech/ui/: main_area.py  sidebar.py
tech/utils/: geocoding.py  metrics.py  routing.py
