[project]
name = "tech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "networkx>=3.6.1",
    "nominatim>=0.1",
    "osmnx>=2.1.0",
    "polyline>=2.0.4",
    "pypdf>=6.7.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "streamlit-folium>=0.26.1",
]
